style fix: remove extra margin

--- a/test-ui-dropdown/src/components/my-dropdown/my-dropdown.css
+++ b/test-ui-dropdown/src/components/my-dropdown/my-dropdown.css
@@ -7,7 +7,6 @@
   display: inline-block;
   font-family: 'Roboto';
   box-sizing: border-box;
-  margin: 8px;
 }
 
 button,
